# jsk_robot

./: .gitmodules  .rosinstall  .travis.yml
jsk_fetch_robot/fetcheus/test/: fetch-moveit.test  test-fetch-moveit.l
jsk_fetch_robot/jsk_fetch_startup/scripts/: warning.py
jsk_naoqi_robot/jsk_pepper_startup/: package.xml
jsk_naoqi_robot/jsk_pepper_startup/launch/: pepper_lifelog.xml  pepper_slam.launch
jsk_pepper_robot/: pepper.rosinstall
jsk_pepper_robot/jsk_pepper_startup/: package.xml
jsk_pepper_robot/jsk_pepper_startup/nodes/: joy-client.l
jsk_pepper_robot/peppereus/: CMakeLists.txt  package.xml  pepper-interface.l
jsk_pr2_robot/jsk_pr2_startup/: CMakeLists.txt  jsk_pr2.rosinstall  package.xml  pr2.launch  pr2_bringup.launch  pr2_gazebo.launch
jsk_pr2_robot/jsk_pr2_startup/config/: jsk_startup.rviz
jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_lifelog/: action_result_db.py  app_manager.launch  db_client.launch  db_play.py  i18n.l  microcone_localization_MFCC.n  objectdetection_db.py  pr2-tweet-log-phrase.l  pr2-tweet-log.l  pr2_hark.launch  pr2_tweet.launch  pr2_tweet_log.launch  transform_utils.py
jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/: costmap_common_params.yaml  dwa_local_planner.yaml  global_costmap_params.yaml  local_costmap_params.yaml  (+7 more)
jsk_robot_common/jsk_robot_lifelog/: CMakeLists.txt  package.xml
jsk_robot_common/jsk_robot_lifelog/launch/: mongodb_client.launch
jsk_robot_common/jsk_robot_lifelog/scripts/: visualization_utils.py  visualize_move_base.py  visualize_objectdetection.l
jsk_robot_common/jsk_robot_startup/: package.xml
(+46 files in other folders)
