<?xml version="1.0"?>
<package>
  <name>jsk_robot_lifelog</name>
  <version>0.0.0</version>
  <description>The jsk_robot_lifelog package</description>

  <maintainer email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</maintainer>
  <license>BSD</license>

  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mongodb_log</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roseus</build_depend>
  <build_depend>roseus_mongo</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <run_depend>mongodb_log</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roseus</run_depend>
  <run_depend>roseus_mongo</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
